--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ ul {
   background: var(--navbar-color);
   border: none;
 }
+.navbar-light .navbar-toggler {
+  border-color: rgba(0, 0, 0, .3);
+}
+
 .nav-link {
   font-weight: 300;
   transition: color 140ms;
@@ -94,7 +98,7 @@ h3 {
 }
 .subtitle {
   font-size: 14px;
-  font-weight: 200;
+  font-weight: bolder;
   margin: 0 auto 10px;
 }
 .logo {
@@ -151,9 +155,6 @@ button[href="#"]:hover {
   text-align: left;
   line-height: 1.4;
   word-wrap: normal;
-}
-.academic-support {
-
 }
 .board .card {
    color: rgb(38, 38, 38);
