--- a/css/main.css
+++ b/css/main.css
@@ -1,102 +1,123 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
+
 *, *::before, *::after {
   text-decoration: none !important;
 }
 :root {
-  --navbar-color: rgb(228, 44, 173);
+  --navbar-color: rgba(228, 44, 173, .92);
+  --navbar-color: rgba(27, 127, 204, 1);
   --pale-blue: #90aeff;
   --light-green: #cefc86;
   --pale-green: #60efb8;
   --light-grey: #f9f7f7;
+  --presidente-green: #299b46;
+}
+.show {
+  display: block;
+}
+.is-hidden {
+  position: absolute;
+  left: -200em;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  display: none;
 }
 body {
-  /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
-  background: var(--pale-green);
+  background: black;
   background-image: linear-gradient(145deg, #43e97b 0%, #38f9d7 100%);
   position: relative;
+  /* margin-top: -56px; */
+  min-height: 100vh;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 a {
-  color: black;
   transition: color 150ms;
 }
-a:link {
-  color: rgba(0, 0, 0, 1);
+a:link, a:visited {
+  color: black;
 }
 a:hover {
-  color: red;
+  color: rgba(0, 0, 0, .5);
 }
 hr {
   border-color: rgba(25, 25, 25, .6);
+}
+article {
+  margin-bottom: 4.5rem;
 }
 ul {
   margin-left: 0;
   padding-inline-start: 20px;
 }
 .navbar, .dropdown-menu {
-  background: var(--navbar-color);
-  border: none;
+  background: var(--presidente-green);
 }
-.navbar-light .navbar-toggler {
-  border-color: rgba(0, 0, 0, .3);
+
+.navbar-dark .navbar-toggler {
+  border-color: #ddd;
+  color: #ddd !important;
 }
 
 .nav-link {
-  font-weight: 300;
+  color: white !important;
   transition: color 140ms;
-}
-.nav-link:hover {
-  color: rgba(0, 0, 0, .7);
+  font-weight: bolder;
 }
 .dropdown-menu {
-  background: var(--navbar-color);
+  color: white;
+  background: var(--presidente-green);
 }
 .dropdown-item {
-  color: rgba(0, 0, 0, 0.9);
-  font-weight: 400;
+  color: white !important;
+  font-weight: bolder;
 }
 .dropdown-item:hover {
-  background: hsl(318, 77%, 45%);
+  background: rgba(255, 255, 255, .1);
 }
-
 main.container {
   color: white;
   padding: 0;
 }
-
 h3 {
-  font-weight: 200;
+  font-weight: 900;
 }
-
 /* Hero Section */
 
 .hero {
-  color: rgb(240, 255, 255);
+  color: white;
   background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4) ),
                url('/img/basketball-1.jpeg');
   background-size: cover;
   background-position: center;
-  font-weight: 100;
+  font-weight: 300;
   margin: 0;
   position: relative;
-  height: 100vh;
+  height: calc(100vh - 56px);
+  height: -o-calc(100vh - 56px); /* opera */
+  height: -webkit-calc(100vh - 56px); /* google, safari */
+  height: -moz-calc(100vh - 56px); /* firefox */
   display: grid;
   align-items: center;
   justify-items: center;
-  grid-template-rows: 0.35fr 1fr minmax(5vh, 1.5fr) 1fr 0.5fr 0.25fr;
+  grid-template-rows: 0.5fr 1fr minmax(5vh, 1.5fr) 1fr 0.5fr 0.25fr;
   overflow: hidden;
 }
 .titlebox {
   text-align: center;
-  padding: 0 1rem;
+  padding: 0;
   grid-row: 2/3;
 }
+.title, .subtitle, .headline {
+  color: rgba(255, 255, 255, .925);
+}
 .title {
-  color: white;
-  font-size: 32px;
   font-weight: 500;
   margin-bottom: 10px;
-  line-height: 1;
+  padding: 0 .5rem;
 }
 .subtitle {
+  color: rgba(255, 255, 255, .925);
   font-size: 14px;
   font-weight: bolder;
   margin: 0 auto 10px;
@@ -109,23 +130,22 @@ h3 {
   grid-row: 3/4;
 }
 .headline {
-  font-size: 15px;
-  font-weight: 300;
-  line-height: 1.35;
-  max-width: 90%;
-  margin: 0 auto .5rem;
-  padding: 0 1rem;
+  font-size: 1rem;
+  margin: 0 auto 1rem;
+  padding: 0 .5rem;
   grid-row: 4/5;
+  width: 88%;
+  max-width: 1080px;
 }
-button[href="#"] {
+.hero a.btn {
   background: rgb(248, 175, 39);
   padding: .5rem 1rem;
-  font-size: 12px;
-  font-weight: 200;
+  font-size: 16px;
+  font-weight: 700;
   transition: background 150ms;
   grid-row: 5/6;
 }
-button[href="#"]:hover {
+.hero a.btn:hover {
   background: rgb(255, 125, 3);
 }
 
@@ -145,23 +165,23 @@ button[href="#"]:hover {
   background: rgb(11,132,191);
   background: radial-gradient(circle, rgba(11,132,191,1) 0%, rgba(11,78,191,1) 400%);
   color: azure;
-  padding: 2.5rem 1rem;
-  border-radius: 5px;
-  margin-bottom: 1.5rem;
+  padding: 2rem 1.5rem;
+  border-radius: 3px;
 }
 .mission p {
-  font-size: 18px;
-  font-weight: 100;
-  text-align: left;
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  font-weight: 300;
+  text-align: justify;
   line-height: 1.4;
-  word-wrap: normal;
 }
 .board .card {
    color: rgb(38, 38, 38);
    margin-bottom: 3rem;
+   cursor: pointer;
 }
 .board h5 {
-  font-weight: 200;
+  font-weight: 700;
 }
 .card-img {
   width: 150px;
@@ -173,13 +193,51 @@ button[href="#"]:hover {
   object-position: 50% 0;
 }
 .card p {
-  font-size: .8rem;
+  font-size: 1rem;
   line-height: 1.8;
 }
 .support {
   background: var(--pale-blue);
   color: black;
 }
+.support a.btn {
+  display: block;
+  width: 100px;
+  height: 100%;
+  margin: 1.5rem auto 0;
+}
+
+.gallery {
+  background: hsl(261, 93%, 57%);
+}
+
+.picture-grid {
+  display: grid;
+  justify-content: center;
+}
+
+.gallery img {
+  width: 100%;
+  height: 100%;
+}
+
+figure {
+  background: rgba(0, 0, 0, 0.25);
+  padding: 1.75rem 1rem;
+  border-radius: 5px;
+}
+
+.gallery hr {
+  border-radius: 5px;
+  border-width: 2px;
+  border-color: rgba(255, 255, 255, 0.4);
+}
+
+figcaption {
+  color: rgba(255, 255, 255, 0.9);
+  font-weight: 500;
+}
+
 .contact {
   background: var(--light-grey);
   color: black;
@@ -187,7 +245,6 @@ button[href="#"]:hover {
 .footer {
   user-select: none;
   background: rgb(43, 43, 43);
-  color: azure;
 }
 .footer ul {
   margin: 0;
@@ -209,8 +266,10 @@ button[href="#"]:hover {
   fill: rgba(240, 255, 255, 0.562);
 }
 .copyright {
+  color: rgba(115, 115, 115, 1);
+  font-size: .9rem;
+  padding: 0 0 1rem 0;
   margin: 0;
-  padding: .4rem;
   text-align: center;
   transition: color 70ms ease-in;
 }
@@ -223,17 +282,16 @@ footer hr {
   color: white;
 }
 
-.events, .media {
+.events {
   display: none;
 }
 
 @media (min-width: 375px) {
-  .subtitle {
-    font-size: 16px;
+  .subtitle, .headline {
+    font-size: 18px;
   }
-  .about, .support, .contact {
+  .about, .support, .contact, .gallery {
     padding: 2.5rem 1.75rem;
-    box-shadow: 0 50px 50px rgba(0, 0, 0, .2);
   }
 }
 
@@ -249,17 +307,19 @@ footer hr {
   .subtitle {
     font-size: 22px;
   }
-  button[href="#"] {
+  .hero a.btn {
     margin-bottom: 2rem;
   }
   .headline {
     font-size: 28px;
+    max-width: 768px;
   }
   main.container {
     margin: 0 auto;
+    width: 90%;
     max-width: 768px;
   }
-  .about, .support, .contact {
+  .about, .support, .contact, .gallery {
     padding: 4.5rem;
   }
   .overview {
@@ -269,6 +329,9 @@ footer hr {
     border-radius: 5px;
     padding: 2rem;
     margin: 2rem 0;
+  }
+  .card p {
+    display: block;
   }
 }
 
@@ -297,17 +360,15 @@ footer hr {
   .subtitle {
     margin: 0.5rem;
   }
-  button[href="#"] {
+  .hero a.btn {
     grid-row: 3/4;
     display: grid;
     place-items: center;
-    margin-top: 2rem;
-    width: 100px;
-    height: 50px;
   }
   .headline {
     font-size: 28px;
     text-align: center;
+    max-width: 1200px;
   }
   main.container {
     margin: 0 auto;
@@ -322,9 +383,8 @@ footer hr {
     margin: 50px 3rem;
   }
   .card-header {
-    width: 25%;
     float: left;
-    margin: 0 1.25rem 1.25rem 0;
+    margin: 0 1rem 1rem 0;
   }
   .social-media-icon {
     --icon-size: 50px;
@@ -343,5 +403,14 @@ footer hr {
   }
   .board {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-height: 545px) {
+  .headline {
+    display: none;
+  }
+  .logo {
+    grid-row: span 2;
   }
 }
