--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,8 @@ h3 {
 
 .about,
 .support,
-.contact {
+.contact,
+.campaign {
   padding: 1.5rem 0.75rem;
 }
 
@@ -217,6 +218,151 @@ h3 {
   width: 100px;
   height: 100%;
   margin: 1.5rem auto 0;
+}
+
+.campaign {
+  background-color: #979797;
+  color: black
+}
+
+.grid-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 30px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  margin: 5px 0;
+}
+
+.grid-item {
+  height: 100px;
+  display: flex;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 45px 5px;
+  position: relative;
+  margin-bottom: 1px;
+  transition: all .2s ease-in;
+}
+
+.grid-item:hover {
+  cursor: pointer;
+  transform: scale(0.8);
+}
+
+.grid-item.grayout:hover {
+  cursor: not-allowed;
+}
+
+.tool {
+  position: relative;
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  color: transparent;
+}
+
+.tool .toolttext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  margin-left: -60px;
+  top: -55px;
+}
+
+.tool:hover .toolttext {
+  visibility: visible;
+}
+
+.tool .toolttext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.item-name.active{
+  display: none;
+}
+
+.item-price{
+  font-size: 1.3em;
+  font-weight: bold;
+  color: black;
+  position: absolute;
+  top: -35px;
+  width: 100%;
+  text-align: center;
+}
+
+.golf {
+  background-image: url('/img/balls/golf.png');
+}
+
+.golf.grayout {
+  background-image: url('/img/balls/golfGray.png');
+}
+
+.tennis {
+  background-image: url('/img/balls/tennis.png');
+}
+
+.tennis.grayout {
+  background-image: url('/img/balls/tennisGray.png');
+}
+
+.baseball {
+  background-image: url('/img/balls/baseball.png');
+}
+
+.baseball.grayout {
+  background-image: url('/img/balls/baseballGray.png');
+}
+
+.football {
+  background-image: url('/img/balls/football.png');
+}
+
+.football.grayout {
+  background-image: url('/img/balls/footballGray.png');
+}
+
+.americanball {
+  background-image: url('/img/balls/americanball.png');
+}
+
+.americanball.grayout {
+  background-image: url('/img/balls/americanballGray.png');
+}
+
+.basketball {
+  background-image: url('/img/balls/basketball.png');
+}
+
+.basketball.grayout {
+  background-image: url('/img/balls/basketballGray.png');
 }
 
 .gallery {
@@ -306,7 +452,8 @@ footer hr {
   .about,
   .support,
   .contact,
-  .gallery {
+  .gallery,
+  .campaign {
     padding: 2.5rem 1.75rem;
   }
 }
@@ -338,7 +485,8 @@ footer hr {
   .about,
   .support,
   .contact,
-  .gallery {
+  .gallery,
+  .campaign {
     padding: 4.5rem;
   }
   .overview {
@@ -352,6 +500,31 @@ footer hr {
   .card p {
     display: block;
   }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
+    margin: 5px 0;
+  }
+  .grid-item {
+   margin: 10px 0;
+  }
+  .tool .toolttext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  margin-left: -60px;
+
+}
 }
 
 @media (min-width: 1280px) {
@@ -395,7 +568,8 @@ footer hr {
   }
   .about,
   .support,
-  .contact {
+  .contact,
+  .campaign {
     padding: 7rem;
   }
   .mission {
