--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,7 @@ h3 {
 
 .grid-item.grayout:hover {
   cursor: not-allowed;
+  transform: scale(1);
 }
 
 .tool {
@@ -364,6 +365,36 @@ h3 {
 .basketball.grayout {
   background-image: url('/img/balls/basketballGray.png');
 }
+
+/* POP UP */
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.pop-up-buttons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+/*  */
 
 .gallery {
   background: hsl(261, 93%, 57%);
