--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ h3 {
 }
 
 .campaign {
-  background-color: #b9b9b9;
+  background-color: #fff;
   color: black
 }
 
@@ -313,7 +313,7 @@ h3 {
   font-weight: bold;
   color: black;
   position: absolute;
-  top: -35px;
+  top: -30px;
   width: 100%;
   text-align: center;
 }
