--- a/css/main.css
+++ b/css/main.css
@@ -564,7 +564,7 @@ footer hr {
     margin: 5px 0;
   }
   .grid-item {
-   margin: 20px 10PX;
+   margin: 20px 10px;
   }
   .item-price{
     top: -30px;
