--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,14 @@ h3 {
   background-image: url("/img/balls/basketballGray.png");
 }
 
+.basketballMulti {
+  background-image: url("/img/balls/basketballMulti.png");
+}
+
+.basketballMulti.grayout {
+  background-image: url("/img/balls/basketballMultiGray.png");
+}
+
 /* POP UP */
 
 .popup {
